Fix top/bottom spacing for Uploaded Themes text This commit fixes the top and bottom margin/padding of the "Uploaded Themes" text to align the text with the "Install Theme" button.
See
https://github.com/Automattic/wp-calypso/pull/37048#pullrequestreview-306934569
for details.

--- a/client/my-sites/themes/themes-selection-header/style.scss
+++ b/client/my-sites/themes/themes-selection-header/style.scss
@@ -4,7 +4,7 @@
 		border-color: transparent;
 		box-shadow: none;
 		padding: 24px 0 0;
-		margin-bottom: 4px;
+		margin-top: 12px;
 	}
 
 	.section-header__label::before {
